# labdata

./: .gitignore  README.md  pyproject.toml
containers/: README.md  labdata-base.sdef  labdata-spks.sdef  prepare_ami.sh
labdata/: __init__.py  cli.py  copy.py  s3.py  utils.py  widgets.py
labdata/compute/: __init__.py  ephys.py  singularity.py  utils.py
labdata/rules/: __init__.py  ephys.py  utils.py
labdata/schema/: __init__.py  ephys.py  general.py  procedures.py  tasks.py  utils.py  video.py
notebooks/: ingest_01_users_strains_subjects.ipynb
src/labdata/: __init__.py  copy.py  s3.py  utils.py
src/labdata/rules/: __init__.py  utils.py
src/labdata/schema/: __init__.py  general.py  procedures.py
